# AndroidAdvance

./: Application.mk  License  README  build.gradle  dependencies.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/androidadvance/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/androidefficientadvanced/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/androidadvance/: MainActivity.java  MyApp.java
app/src/main/java/com/example/androidefficientadvanced/: MainActivity.java  MyApp.java  (+1 more)
app/src/main/res/layout/: activity_main_word.xml  activity_rx.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
autostart/: build.gradle
autostart/src/main/: AndroidManifest.xml
autostart/src/main/cpp/: CMakeLists.txt  autostart.cpp
baselib/: README.md  build.gradle
baselib/src/main/: AndroidManifest.xml
baselib/src/main/res/values/: colors.xml  dimens.xml  styles.xml
common/: build.gradle
githubtrending/: build.gradle
githubtrending/src/main/: AndroidManifest.xml
githubtrending/src/main/res/layout/: activity_main.xml  item_repo.xml
githubtrending/src/main/res/values/: strings.xml  themes.xml
githubtrending/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
imageprocessor/: build.gradle
javassist-gradle-plugin/: build.gradle
jetpack/: build.gradle
jetpack/src/main/: AndroidManifest.xml
jetpack/src/main/res/layout/: activity_api.xml  activity_audio_focus.xml  activity_coroutines.xml  activity_fast_main.xml  activity_livedata.xml  activity_main.xml  activity_main_retrofit.xml  activity_name.xml  activity_new_word.xml  activity_saved_state.xml  activity_second.xml  fragment_api.xml  recyclerview_item.xml
jetpack/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
keepalive/src/main/: AndroidManifest.xml
kotlin/: build.gradle
kotlin/src/main/: AndroidManifest.xml
matrix/: build.gradle
matrix/src/main/: AndroidManifest.xml
matrix/src/main/res/layout/: activity_main.xml
matrix/src/main/res/values/: styles.xml
native/: Android.mk  README.md  build.gradle
native/src/main/: AndroidManifest.xml
native/src/main/cpp/: CMakeLists.txt  Logger.h  hacker.c  hookee.c  native-catcher.cpp  native-lib.cpp  test_malloc.cpp
native/src/main/res/layout/: activity_main.xml
native/src/main/resources/lib/arm64-v8a/: wrap.sh.bak
performance/: build.gradle
performance/src/main/: AndroidManifest.xml
performance/src/main/res/values/: strings.xml
repo/com/example/javassist/gradleplugin/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
repo/com/example/javassist/gradleplugin/1.0.0/: gradleplugin-1.0.0.jar.md5  gradleplugin-1.0.0.jar.sha1  gradleplugin-1.0.0.pom  gradleplugin-1.0.0.pom.md5  gradleplugin-1.0.0.pom.sha1
rxjava/: build.gradle
rxjava/src/main/: AndroidManifest.xml
rxjava/src/main/res/layout/: activity_rx.xml
rxjava/src/main/res/values/: strings.xml
track/: build.gradle
(+333 files in other folders)
